tests/spec/format/snapshots/lambda_no_params.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let f = || 42; }"
---
fn test() {
  let f = || 42
}
