tests/spec/format/snapshots/lambda_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let f = |x| x + 1; }"
---
fn test() {
  let f = |x| x + 1
}
