tests/spec/format/snapshots/lambda_typed.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let f = |x: int| -> int { x + 1 }; }"
---
fn test() {
  let f = |x: int| -> int {
    x + 1
  }
}
