tests/spec/format/snapshots/lambda_with_block.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let f = |x| { let y = x + 1; y * 2 }; }"
---
fn test() {
  let f = |x| {
    let y = x + 1
    y * 2
  }
}
