tests/spec/format/snapshots/leading_comment_on_struct_field.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Point {
    // documentation for x
    x: int,
    // documentation for y
    y: int,
  }
---
struct Point {
  // documentation for x
  x: int,
  // documentation for y
  y: int,
}
