tests/spec/format/snapshots/let_assert_statement.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let assert Ok(h) = parse(x) }"
---
fn test() {
  let assert Ok(h) = parse(x)
}
