tests/spec/format/snapshots/let_binding.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let x = 42 }"
---
fn test() {
  let x = 42
}
