tests/spec/format/snapshots/let_else_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test(opt: Option<int>) -> int { let Some(x) = opt else { return 0; }; x }"
---
fn test(opt: Option<int>) -> int {
  let Some(x) = opt else {
    return 0
  }
  x
}
