tests/spec/format/snapshots/let_else_with_result.snap
---
source: tests/spec/format/mod.rs
description: "fn test(res: Result<int, string>) -> int { let Ok(x) = res else { return 0; }; x }"
---
fn test(res: Result<int, string>) -> int {
  let Ok(x) = res else {
    return 0
  }
  x
}
