tests/spec/format/snapshots/let_mut_binding.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let mut counter = 0 }"
---
fn test() {
  let mut counter = 0
}
