tests/spec/format/snapshots/let_with_inferred_type.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let x: _ = 42 }"
---
fn test() {
  let x: _ = 42
}
