tests/spec/format/snapshots/let_with_type.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let x: int = 42 }"
---
fn test() {
  let x: int = 42
}
